--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>定位布局完成后台网页设计</title>
-	<link rel="stylesheet" href="common.css">
+	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_1327450_9qlr53v4dy.css">
 
 	<style>
